# terafirma

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  Terafirma.toml
src/: builder.rs  lib.rs  main.rs  page.rs
tests/: cli.rs
tests/files-only/pages/: home.html  post-1.html  post-2.html
tests/files-only/static/: style.css
tests/files-only/templates/: post.html
tests/paths-changed/: Terafirma.toml
tests/toml-files/: Terafirma.toml
tests/toml-files/pages/: post-2.html
tests/toml-files/templates/: post.html
tests/toml-only/: Terafirma.toml
